<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" tools:context=".MainActivity">
    <item
        android:id="@+id/action_first_page" android:title="@string/action_first_page_news"
        android:orderInCategory="100" app:showAsAction="never"
        />
    <item android:id="@+id/action_politics" android:title="@string/action_politics_page_news"
        android:orderInCategory="101" app:showAsAction="never" />
    <item android:id="@+id/action_general" android:title="@string/action_general_page_news"
        android:orderInCategory="102" app:showAsAction="never" />
    <item android:id="@+id/action_incidents" android:title="@string/action_incidents_page_news"
        android:orderInCategory="103" app:showAsAction="never" />
    <item android:id="@+id/action_court" android:title="@string/action_court_page_news"
        android:orderInCategory="104" app:showAsAction="never" />
    <item android:id="@+id/action_tamilnadu" android:title="@string/action_tamilnadu_page_news"
        android:orderInCategory="105" app:showAsAction="never" />
    <item android:id="@+id/action_delhi" android:title="@string/action_delhi_page_news"
        android:orderInCategory="106" app:showAsAction="never" />
    <item android:id="@+id/action_international" android:title="@string/action_international_page_news"
        android:orderInCategory="107" app:showAsAction="never" />
    <item android:id="@+id/action_business" android:title="@string/action_business_page_news"
        android:orderInCategory="108" app:showAsAction="never" />
    <item android:id="@+id/action_cinema" android:title="@string/action_cinema_page_news"
        android:orderInCategory="109" app:showAsAction="never" />
</menu>
